--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
         <div class="ans screen"></div>
       </div>
       <div class="buttons">
-        <button class="clear">AC</button>
-        <button class="delete">DEL</button>
-        <button class="sign">+/-</button>
-        <button class="division operator">/</button>
-        <button class="seven operend">7</button>
-        <button class="eight operend">8</button>
-        <button class="nine operend">9</button>
+        <button id="clear">AC</button>
+        <button id="delete">DEL</button>
+        <button id="sign">+/-</button>
+        <button class="operator">/</button>
+        <button id='7' class="operend">7</button>
+        <button id='8' class="operend">8</button>
+        <button id='9' class="operend">9</button>
         <button class="multiply operator">*</button>
-        <button class="six operend">6</button>
-        <button class="five operend">5</button>
-        <button class="four operend">4</button>
+        <button id='6' class="operend">6</button>
+        <button id='5' class="operend">5</button>
+        <button id='4' class="operend">4</button>
         <button class="sub operator">-</button>
-        <button class="three operend">3</button>
-        <button class="two operend">2</button>
-        <button class="one operend">1</button>
-        <button class="add operator">+</button>
+        <button id='3' class="operend">3</button>
+        <button id='2' class="operend">2</button>
+        <button id='1' class="operend">1</button>
+        <button id='add'class="operator">+</button>
         <button class="dot">.</button>
-        <button class="zero operend">0</button>
-        <button class="equal">=</button>
+        <button class="operend">0</button>
+        <button id="equal">=</button>
       </div>
     </div>
   </div>
