--- a/index.html
+++ b/index.html
@@ -11,29 +11,29 @@
   <div id="container">
     <div id="calculator">
       <div id="display-screen">
-        <div class="expr screen"></div>
-        <div class="ans screen"></div>
+        <div id="expr" class="screen"></div>
+        <div id="ans" class="screen"></div>
       </div>
       <div class="buttons">
         <button id="clear">AC</button>
         <button id="delete">DEL</button>
-        <button id="sign">+/-</button>
-        <button class="operator">/</button>
-        <button id='7' class="operend">7</button>
-        <button id='8' class="operend">8</button>
-        <button id='9' class="operend">9</button>
-        <button class="multiply operator">*</button>
-        <button id='6' class="operend">6</button>
-        <button id='5' class="operend">5</button>
-        <button id='4' class="operend">4</button>
-        <button class="sub operator">-</button>
-        <button id='3' class="operend">3</button>
-        <button id='2' class="operend">2</button>
-        <button id='1' class="operend">1</button>
-        <button id='add'class="operator">+</button>
-        <button class="dot">.</button>
+        <button id="modulo" class="operator">%</button>
+        <button id="division" class="operator">/</button>
+        <button id='7'   class="operend">7</button>
+        <button id='8'   class="operend">8</button>
+        <button id='9'   class="operend">9</button>
+        <button id="multiply" class="operator">*</button>
+        <button id='6'   class="operend">6</button>
+        <button id='5'   class="operend">5</button>
+        <button id='4'   class="operend">4</button>
+        <button id="sub" class="operator">-</button>
+        <button id='3'   class="operend">3</button>
+        <button id='2'   class="operend">2</button>
+        <button id='1'   class="operend">1</button>
+        <button id='add' class="operator">+</button>
+        <button id='.'   class="operend">.</button>
         <button class="operend">0</button>
-        <button id="equal">=</button>
+        <button id="equals">=</button>
       </div>
     </div>
   </div>
