--- a/index.html
+++ b/index.html
@@ -8,40 +8,51 @@
   <title>Calculator</title>
 </head>
 <body>
-  <div id="container">
-    <div id="calculator">
-      <div id="display-screen">
-        <div id="expr" class="screen"></div>
-        <div id="ans" class="screen"></div>
-      </div>
-      <div class="buttons">
-        <button id="clear">AC</button>
-        <button id="delete">DEL</button>
-        <button id="modulo" class="operator">%</button>
-        <button id="division" class="operator">/</button>
-        <button id='7'   class="operend">7</button>
-        <button id='8'   class="operend">8</button>
-        <button id='9'   class="operend">9</button>
-        <button id="multiply" class="operator">*</button>
-        <button id='6'   class="operend">6</button>
-        <button id='5'   class="operend">5</button>
-        <button id='4'   class="operend">4</button>
-        <button id="sub" class="operator">-</button>
-        <button id='3'   class="operend">3</button>
-        <button id='2'   class="operend">2</button>
-        <button id='1'   class="operend">1</button>
-        <button id='add' class="operator">+</button>
-        <button id='.'   class="operend">.</button>
-        <button class="operend">0</button>
-        <button id="equals">=</button>
+  <header>
+    <h2>CALCULATOR</h2>
+  </header>
+  
+    <div id="container">
+      <div id="calculator">
+        <div id="display-screen">
+          <div id="expr" class="screen"></div>
+          <div id="ans" class="screen"></div>
+        </div>
+        <div class="buttons">
+          <button id="clear">AC</button>
+          <button id="delete">DEL</button>
+          <button value='%' class="operator">%</button>
+          <button value='/' class="operator">/</button>
+          <button value='7' class="operend">7</button>
+          <button value='8' class="operend">8</button>
+          <button value='9' class="operend">9</button>
+          <button value='*' class="operator">*</button>
+          <button value='6' class="operend">6</button>
+          <button value='5' class="operend">5</button>
+          <button value='4' class="operend">4</button>
+          <button value='-' class="operator">-</button>
+          <button value='3' class="operend">3</button>
+          <button value='2' class="operend">2</button>
+          <button value='1' class="operend">1</button>
+          <button value='+' class="operator">+</button>
+          <button value='.' class="operend">.</button>
+          <button class="operend">0</button>
+          <button id="equals">=</button>
+        </div>
       </div>
     </div>
-  </div>
 
-
-
-
-
+    <footer>
+      <p>
+        Copyright ©
+        <script>
+          document.write(new Date().getFullYear())
+        </script>
+      <a href=https://github.com/hemanthkanna target="_blank">
+        hemanthkanna
+      </a>
+      </p>
+    </footer>
   <script src="script.js"></script>
 </body>
 </html>
